reindent frontend with tabs, fix eurocrate path, impl eurocrate list
